--- a/test/fixtures/posts.yml
+++ b/test/fixtures/posts.yml
@@ -4,10 +4,12 @@ one:
   title: MyString
   body: MyText
   category_id: 1
-  author_id: 1
+  author_id: MyString
+  integer: MyString
 
 two:
   title: MyString
   body: MyText
   category_id: 1
-  author_id: 1
+  author_id: MyString
+  integer: MyString
