--- a/config/database.yml
+++ b/config/database.yml
@@ -22,7 +22,7 @@ development:
 # Do not set this db to the same as development or production.
 test:
   adapter: postgresql
-  database: myrubyblog
+  database: myrubyblog_test
   username: postgres
   password: sromano
   pool: 5
